--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   --color-secondary-dark: #f7f7f7;
 
   --color-blue-icon: #E6EDF8;
+  --color-blue-dark-gradient: #E6EDF8;/* #234566; */
+  --color-blue-light-gradient: #FFFEFA;/* #468BCC; */
 
   --font-title: 'Poppins', sans-serif;
 }
@@ -28,6 +30,10 @@
   box-shadow: inset 0 -2px 11px 0px rgba(218, 218, 218, 0.19);
 }
 
+@utility bg-body {
+  @apply bg-linear-to-b from-secondary from-20% to-primary
+}
+
 @utility title {
   @apply font-title font-bold leading-11
 }
@@ -36,6 +42,14 @@
   @apply font-title font-semibold text-center
 }
 
+@utility text-2xs {
+  @apply text-[10px];
+}
+
 @utility nav-blur {
   @apply blur-2xl;
+}
+
+@utility bg-card-service {
+  @apply bg-linear-to-t from-primary/90 to-primary/70;
 }
