--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @theme {
-  --color-primary: #E67E22;
-  --color-secondary: #FFFEFA;
+  --color-primary: #e67e22;
+  --color-secondary: #fffefa;
 
   --color-primary-dark: #d47420;
   --color-secondary-dark: #f7f7f7;
   --color-blue-dark: #234566;
+  --color-blue-black: #001325;
 
-  --color-blue-icon: #E6EDF8;
-  --color-blue-dark-gradient: #E6EDF8;/* #234566; */
-  --color-blue-light-gradient: #FFFEFA;/* #468BCC; */
+  --color-blue-icon: #e6edf8;
+  --color-blue-dark-gradient: #e6edf8; /* #234566; */
+  --color-blue-light-gradient: #fffefa; /* #468BCC; */
 
   --font-title: 'Poppins', sans-serif;
 }
@@ -26,21 +27,20 @@
   background-size: cover;
   position: relative;
 }
-
 .nav-inset-shadow {
   box-shadow: inset 0 -2px 11px 0px rgba(218, 218, 218, 0.19);
 }
 
 @utility bg-body {
-  @apply bg-linear-to-b from-secondary from-20% to-primary
+  @apply bg-linear-to-b from-secondary from-20% to-primary;
 }
 
 @utility title {
-  @apply font-title font-bold leading-11
+  @apply font-title font-bold leading-11;
 }
 
 @utility subtitle {
-  @apply font-title font-semibold text-center md:text-2xl
+  @apply font-title font-semibold text-center md:text-2xl;
 }
 
 @utility text-2xs {
@@ -60,11 +60,11 @@
 }
 
 @utility footer-icon {
-  @apply hover:-translate-y-2 transition cursor-pointer
+  @apply hover:-translate-y-2 transition cursor-pointer;
 }
 
 @utility bg-benefits {
-  @apply bg-[url('/img/puppies-collection.webp')] bg-blend-luminosity
+  @apply bg-[url('/img/puppies-collection.webp')] bg-blend-luminosity;
 }
 
 @utility bg-linear-primary {
@@ -73,4 +73,12 @@
 
 @utility bg-benefit-card {
   @apply bg-linear-primary shadow-md border-2 border-amber-500 rounded-xl p-4;
+}
+
+@utility bg-orange-fade {
+  background: linear-gradient(
+    134.95deg,
+    rgba(217, 217, 217, 0) 47.16%,
+    rgb(221, 109, 11) 100%
+  );
 }
